Support page included in server file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         <div class="nav-links" id="navLink">
             <ul>
                 <li><a href="/" class="active">HOME</a></li>
-                <li><a href="/">SUPPORT</a></li>
+                <li><a href="/support">SUPPORT</a></li>
             </ul>
         </div>
        </nav>
