--- a/views/addDropStudent.ejs
+++ b/views/addDropStudent.ejs
@@ -20,17 +20,23 @@
     <div class="header">
         <h2>Add - Drop Courses</h2>
     </div>
-    <div class="sub-header">
-        <h5>Registered semester : <%= courseAssignments[0].semesterAssigned.name %>
-        </h5>
-        <h5>Program : <%= courseAssignments[0].programAssigned.degreeOffered.name %>
-                <%= courseAssignments[0].programAssigned.branchOffered.name %>
-        </h5>
-    </div>
+    
     <section class="home-section">
         <div class="table-container">
             <form action="/addDropStudent" method="post">
                 <ul class="table-responsive-lg">
+                    <table class="data-table">
+                        <tr>
+                            <th><strong>Registered semester</strong></th>
+                            <td><%= courseAssignments[0].semesterAssigned.name %></td>
+                        </tr>
+                        <tr>
+                            <th><strong>Program</strong></th>
+                            <td><%= courseAssignments[0].programAssigned.degreeOffered.name %>
+                                <%= courseAssignments[0].programAssigned.branchOffered.name %></td>
+                        </tr>
+                       
+                    </table>
                     <li class="thead-dark">
                         <div class="col col-1">SR No</div>
                         <div class="col col-2">Course Code</div>
