--- a/views/gradeCard.ejs
+++ b/views/gradeCard.ejs
@@ -24,29 +24,31 @@
             <h2>Attendance</h2>
             <% } %>
     </div>
-    
+   
     <section class="home-section">
         <div class="table-container">
             <form action="/gradeCard" method="post">
                 <ul class="table-responsive-lg">
-                    <table class="data-table">
+                    <div class="data-container">
+                        <table class="data-table">
                             
-                        <tr>
-                            <th><strong>Semester</strong></th>
-                            <td><%= tuple[1] %></td>
-                        </tr>
-                        <tr>
-                            <th><strong>Name</strong></th>
-                            <td><%= result[0].studentEnrolled.firstname %>
-                                <%= result[0].studentEnrolled.middlename %>
-                                    <%= result[0].studentEnrolled.lastname %></td>
-                        </tr>
-                        <tr>
-                            <th><strong>Student ID</strong></th>
-                            <td><%= result[0].studentEnrolled.studentID %></td>
-                        </tr>
-                       
-                    </table>
+                            <tr>
+                                <th><strong>Semester</strong></th>
+                                <td><%= tuple[1] %></td>
+                            </tr>
+                            <tr>
+                                <th><strong>Name</strong></th>
+                                <td><%= result[0].studentEnrolled.firstname %>
+                                    <%= result[0].studentEnrolled.middlename %>
+                                        <%= result[0].studentEnrolled.lastname %></td>
+                            </tr>
+                            <tr>
+                                <th><strong>Student ID</strong></th>
+                                <td><%= result[0].studentEnrolled.studentID %></td>
+                            </tr>
+                           
+                        </table>
+                    </div>
                     <li class="thead-dark">
                         <div class="col col-1">SR No</div>
                         <div class="col col-2">Course Code</div>
@@ -103,19 +105,16 @@
                         <% spi=Math.round(spi * 100) / 100 %>
                             <h4>SPI: <%= spi %>
                             </h4>
-                            <button type="submit" name="result" class="submit"
+                            <button type="submit" name="result"
                                 value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
 
                             <% } else if (signal=="1") { %>
                                 <h4>SPI: Not declared</h4>
-                                <div class="input-field">
-                                <button disabled class="submit" type="submit" name="result"
+                                <button disabled type="submit" name="result"
                                     value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
-                                </div>
                                 <% } %>
             </form>
-            <br>
-            <br>
+
         </div>
     </section>
 
