--- a/views/updateInstructor.ejs
+++ b/views/updateInstructor.ejs
@@ -34,7 +34,7 @@
               <h3>Update Instructor Details</h3>
 
               <form
-                action="/updateStudent"
+                action="/updateInstructor"
                 method="post"
                 class="mb-5"
                 id="contactForm"
