--- a/views/viewComplains.ejs
+++ b/views/viewComplains.ejs
@@ -56,9 +56,9 @@
                                         </div>
                                         <div class="col col-5" data-label="Batch">
                                             <% if (complains[i].status==true) { %>
-                                                <input style="accent-color: #434242;" type="checkbox" name="status" id="status" checked>
+                                                <input style="accent-color: #434242; transform:scale(1.5);" type="checkbox" name="status" id="status" checked>
                                                 <% } else { %>
-                                                    <input style="accent-color: #434242;" type="checkbox" name="status" id="status">
+                                                    <input style="accent-color: #434242; transform:scale(1.5);" type="checkbox" name="status" id="status">
                                                     <% } %>
                                                         
                                         </div>
