--- a/public/css/styleadminlogin.css
+++ b/public/css/styleadminlogin.css
@@ -112,6 +112,10 @@ body {
   background: #42423f;
   color: #fff;
 }
+.submit:focus {
+  background: #42423f;
+  color: #fff;
+}
 .signin {
   text-align: center;
   font-size: small;
