--- a/views/addCourse.ejs
+++ b/views/addCourse.ejs
@@ -10,20 +10,45 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Add Course</title>
 </head>
 <body>
     <%- include('adminNavbar') %>
-    <div class="main-body-top">
-        <form action="/addCourse" method="post">
-            <input type="text" placeholder="Name" name="name">
-            <input type="text" placeholder="Code" name="code">
-            <input type="number" step=".1" placeholder="Credits" name="credits">
-            <input type="text" placeholder="Description" name="description">
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-    
-    
+    <section class="form-body">
+
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Add Course</h3>
+                    
+                        <form action="/addCourse" method="post" class="mb-5" id="contactForm" name="contactForm">
+            
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Coursename" class="col-form-label">Course Name </label>
+                                    <input type="text" class="form-control" placeholder="Name" name="name">      
+                                </div>
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Coursename" class="col-form-label">Course Code </label>
+                                    <input type="text" class="form-control" placeholder="Code" name="code">   
+                                </div>
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Coursename" class="col-form-label">Description </label>
+                                    <input type="text" class="form-control" placeholder="Description" name="description"> 
+                                </div>
+                         
+                                <div class="input-field">
+                                    <button class="submit" type="submit">Submit</button>
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>    
 </body>
 </html>
