--- a/views/feeStructure.ejs
+++ b/views/feeStructure.ejs
@@ -50,7 +50,7 @@
                                     </div>
                                     <div class="col col-4" data-label="Name">
                                         <button type='submit' name="delete" value="<%=program.id%>,<%=key%>"
-                                            class="delete-btn"><i class='far fa-trash-alt'></i></button>
+                                            class="delete-btn mybtn"><i class='fa-solid fa-trash'></i></button>
                                     </div>
                                 </li>
                                 <% } %>
