--- a/public/css/form.css
+++ b/public/css/form.css
@@ -31,7 +31,8 @@
     transform: scale(0.9);
 }
 .form-container {
-    margin-top: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     margin-left: 20%;
     padding-left: 15%;
     margin-right: 20%;
