--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@
 }
 .head-button{
   height: 40px;
+  width: 130px;
   border: none;
   background-color: #242728;
   color: white;
@@ -39,8 +40,9 @@
     outline: none;
     position: relative;
     text-align: center;
+    margin-bottom: 5%;;
     height: 45px;
-    width: 70px;
+    width: 40%;
     border: 2px solid #242728;
     border-radius: 5px;
     transition: 0.4s;
@@ -52,6 +54,14 @@
   .submit:hover {
     transform: scale(0.96);
     box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.2);
+  }
+  .input-field {
+    /* display: flex;
+    justify-content: space-evenly;
+    padding: 10px; */
+    padding-top: 2%;
+    display: flex;
+    justify-content: space-around;
   }
 .mybtn{
     align-items: center;
