--- a/views/gradeCard.ejs
+++ b/views/gradeCard.ejs
@@ -46,6 +46,18 @@
                                 <th><strong>Student ID</strong></th>
                                 <td><%= result[0].studentEnrolled.studentID %></td>
                             </tr>
+                            <tr>
+                                <% if (count==6 && signal=="1") { %>
+                                    <% spi /=6 %>
+                                        <% spi=Math.round(spi * 100) / 100 %>
+                                            <th><strong>SPI </strong></th>
+                                            <td><%= spi %></td>
+                
+                                            <% } else if (signal=="1") { %>
+                                                <th><strong>SPI </strong></th>
+                                                <td style="color:red;">Not Declared</td>
+                                                <% } %>
+                            </tr>
                            
                         </table>
                     </div>
@@ -100,20 +112,19 @@
                         </li>
                         <% } %>
                 </ul>
-                <% if (count==6 && signal=="1") { %>
-                    <% spi /=6 %>
-                        <% spi=Math.round(spi * 100) / 100 %>
-                            <h4>SPI: <%= spi %>
-                            </h4>
-                            <button type="submit" name="result"
-                                value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
-
-                            <% } else if (signal=="1") { %>
-                                <h4>SPI: Not declared</h4>
-                                <button disabled type="submit" name="result"
-                                    value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
-                                <% } %>
+                
             </form>
+            <% if (count==6 && signal=="1") { %>
+                <div class="input-field">
+                        <button class="submit" type="submit" name="result"
+                            value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
+                        </div>
+                        <% } else if (signal=="1") { %>
+                            <div class="input-field">
+                            <button class="submit" disabled type="submit" name="result"
+                                value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
+                            <% } %>
+                        </div>
 
         </div>
     </section>
