--- a/views/adminNavbar.ejs
+++ b/views/adminNavbar.ejs
@@ -78,11 +78,14 @@
             <li>
                 <div class="profile-details">
                     <div class="profile-content">
-                        
+                            <img style="background-color: white;" src="img/administrator.png" alt="Administrator">
                     </div>
                     <div class="name-job">
                         <div class="profile_name">
-                            Admin name here
+                            Admin Name
+                        </div>
+                        <div class="job">
+                            Dean Ap
                         </div>
                     </div>
                     <form action="/logoutAdmin?_method=DELETE" method="POST">
