--- a/views/feeSemesterPayments.ejs
+++ b/views/feeSemesterPayments.ejs
@@ -49,7 +49,7 @@
                                                 <%= semester[i].dateCreated.toLocaleDateString("en-US", options) %>
                                 </div>
                                 <div class="col col-5" data-label="Name">
-                                    <button type='submit' name="view" value="<%= semester[i].id %>">Select</button>
+                                    <button class="view-btn" type='submit' name="view" value="<%= semester[i].id %>">Select</button>
                                 </div>
                             </li>
                             <% } %>
