--- a/views/feeStructure.ejs
+++ b/views/feeStructure.ejs
@@ -72,7 +72,9 @@
                         <% } %>
                         <br>
                         <form action="/addFee" method="post">
-                            <button type="submit" name="program" value="<%= program.id %>"> Add </button>
+                            <div class="input-field">
+                            <button class="submit" type="submit" name="program" value="<%= program.id %>"> Add </button>
+                        </div>
                         </form>
                         
 
