--- a/views/semesterResults.ejs
+++ b/views/semesterResults.ejs
@@ -52,10 +52,10 @@
                                 <div class="col col-3" data-label="Name">
                                     
                                     <% if (signal=="1") { %>
-                                        <button type='submit' name="x"
+                                        <button class="view-btn" type='submit' name="x"
                                         value="<%= semester[i-1].id + " " + i %>">Result</button>
                                     <% } else { %>
-                                        <button type='submit' name="x"
+                                        <button class="view-btn" type='submit' name="x"
                                         value="<%= semester[i-1].id + " " + i %>">Attendance</button>
                                     <% } %>
                                 </div>
