--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 /* html { overflow-y: scroll; } */
+* {
+    font-family: 'Poppins', sans-serif;
+}
 
 .header h2,h1, input{
     font-family: 'Spartan', sans-serif;
@@ -66,7 +69,7 @@
 .mybtn{
     align-items: center;
     text-align: center;
-    color: black;
+    color: #242728;
     cursor: pointer;
     border: none !important;
     background: transparent !important;
@@ -76,6 +79,23 @@
 .mybtn:hover{
     transform: scale(0.9);
     color: grey;
+}
+.view-btn{
+  padding-left: 7%;
+  padding-right:7%;
+  background: #242728;
+  color: white;
+  height: 30px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2);
+
+}
+.view-btn:hover{
+  transform: scale(0.95);
+}
+.view-btn:focus{
+  transform: scale(0.95);
 }
 
 .mycontainer{
@@ -131,59 +151,7 @@
     white-space: nowrap;
   }
   
-/* hr{
-    color: whitesmoke
-}
 
-.my-table {
-    width: 80%;
-    margin-left: 10%
-}
-
-table,
-th,
-td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    text-align: center;
-}
-
-th,
-td {
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #f2f2f2
-}
-
-th {
-    background-color: lightblue;
-    color: black;
-    border-collapse: collapse;
-}
-
-.table-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-#table-data {
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    top: 40%;
-} */
-
-/* Google Fonts Import Link */
-
-* {
-    font-family: 'Poppins', sans-serif;
-}
 
 .sidebar {
     position: fixed;
