--- a/views/addProgram.ejs
+++ b/views/addProgram.ejs
@@ -26,7 +26,7 @@
                 <div class="main-body-top">
                     <div class="show">
                     <div class="col-lg-9 form-group mb-3">
-                        <label for="program" class="col-form-label">Degree</label>
+                        <label for="program" class="col-form-label" style="font-size:20px">Degree</label>
                         <select class="custom-select form-control" name="degree" id="degree" required>
                             <option class="form-control" value="select" selected disabled>Select</option>
 
@@ -44,7 +44,7 @@
                 </div>
                 <div class="show">
                     <div class="col-lg-9 form-group mb-3">
-                        <label for="program" class="col-form-label">Branch</label>
+                        <label for="program" class="col-form-label" style="font-size:20px">Branch</label>
                     <select class="custom-select form-control" name="branch" id="branch" required>
                         <option class="form-control" value="Select" selected disabled>Select</option>
 
