--- a/views/addSemester.ejs
+++ b/views/addSemester.ejs
@@ -40,7 +40,7 @@
             <div></div>
                 <form action="/addSemester" method="post" class="form">
                     <div class="col-md-6 form-group mb-3">
-                        <label for="semester" class="col-form-label">Semester</label>
+                        <label for="semester" class="col-form-label" style="font-size: 20px;">Semester</label>
                     <input type="text" class="form-control" placeholder="Name" name="name" >
                 </div>
                     <ul class="table-responsive-lg">
@@ -62,14 +62,15 @@
                                         <%= program[i].branchOffered.name %>
                                 </div>
                                 <div class="col col-3" data-label="Name">
-                                    <input style="accent-color: #434242;" type="checkbox" name="program" value="<%= program[i].id %>"><span
+                                    <input style="accent-color: #242728; transform:scale(1.5);" type="checkbox" name="program" value="<%= program[i].id %>"><span
                                         class="checkmark" ></span>
                                 </div>
                             </li>
                             <% } %>
                     </ul>
-                    <div class="input-field"></div>
+                    <div class="input-field">
                     <button class="submit" type="submit">Next</button>
+                </div>
                 </form>
      
             </div>
