--- a/views/feeProgram.ejs
+++ b/views/feeProgram.ejs
@@ -47,7 +47,7 @@
                                     <%= program[i].branchOffered.name %>
                                 </div>
                                 <div class="col col-4" data-label="Batch">
-                                    <button type='submit' name="view" value="<%= program[i].id %>">View</button>
+                                    <button class="view-btn" type='submit' name="view" value="<%= program[i].id %>">View</button>
                                 </div>
                             </li>
                             <% } %>
