Forgot password Functionality added

--- a/views/forgotPasswordAdmin.ejs
+++ b/views/forgotPasswordAdmin.ejs
@@ -13,35 +13,22 @@
 
 <body>
 
-    <form action="/adminLogin" method="post">
+    <form action="/forgotPasswordAdmin" method="post">
 
         <div class="container main">
             <div class="row">
-                <div class="col-md-6 side-image"> <a for="" class="close-btn1 fa fa-close" href="/"></a>
+                <div class="col-md-6 side-image"> <a for="" class="close-btn1 fa fa-close" href="/adminLogin"></a>
                 </div>
                 <div class="col-md-6 right">
-                    <a for="" class="close-btn fa fa-close" href="/"></a>
+                    <a for="" class="close-btn fa fa-close" href="/adminLogin"></a>
                     <div class="input-box">
-                        <header>Admin Login</header>
+                        <header>Forgot password</header>
                         <div class="input-field">
                             <input type="text" class="input" id="email" name="email"  autocomplete="off">
                             <label for="username">Username</label>
                         </div>
                         <div class="input-field">
-                            <input type="password" class="input" id="password" name="password" >
-                            <label for="password">Password</label>
-                        </div>
-                        <div class="input-field">
-                            <input type="submit" class="submit" value="Sign In">
-
-                        </div>
-                        <div class="signin">
-                            <span>Forgot password? <a href="/forgotPasswordAdmin">Help</a></span>
-                            <br>
-                            <% if (messages.error) { %>
-                                <% console.log(messages.error) %>
-                                <p style="color: red;"> <%= messages.error %></p>
-                                    <% } %>
+                            <input type="submit" class="submit" value="Send Verifiction">
                         </div>
                     </div>
                 </div>
