--- a/views/forgotPasswordStudent.ejs
+++ b/views/forgotPasswordStudent.ejs
@@ -10,34 +10,22 @@
     <title>Student Login</title>
 </head>
 <body>
-    <form action="/studentLogin" method="post">
+    <form action="/forgotPasswordStudent" method="post">
         <div class="container main">
             <div class="row">
-                <div class="col-md-6 side-image">  <a for="" class="close-btn1 fa fa-close" href="/"></a> 
+                <div class="col-md-6 side-image">  <a for="" class="close-btn1 fa fa-close" href="/studentLogin"></a> 
                 </div>
                 <div class="col-md-6 right">
-                    <a for="" class="close-btn fa fa-close" href="/"></a>
+                    <a for="" class="close-btn fa fa-close" href="/studentLogin"></a>
                      <div class="input-box">
-                        <header  >Student Login</header>
+                        <header  >Forgot Password</header>
                         <div class="input-field">
                             <input type="text" class="input" id="username" name="email"  autocomplete="off">
                             <label for="username">Email</label>
                         </div>
                         <div class="input-field">
-                            <input type="password" class="input" id="password" name="password" >
-                            <label for="password">Password</label>
-                        </div>
-                        <div class="input-field">
-                            <input type="submit" class="submit" value="Sign In">
+                            <input type="submit" class="submit" value="Send Verifiction">
                             
-                        </div>
-                        <div class="signin">
-                            <span>Forgot password? <a href="/forgotPasswordStudent">Help</a></span>
-                            <br>
-                            <% if (messages.error) { %>
-                                <% console.log(messages.error) %>
-                                <p style="color: red;"> <%= messages.error %></p>
-                                    <% } %>
                         </div>
                      </div>
                 </div>
