--- a/views/forgotPasswordInstructor.ejs
+++ b/views/forgotPasswordInstructor.ejs
@@ -7,37 +7,25 @@
     <link rel="stylesheet" href="../css/stylefacultylogin.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Student Login</title>
+    <title>Instructor Login</title>
 </head>
 <body>
-    <form action="/instructorLogin" method="post">
+    <form action="/forgotPasswordInstructor" method="post">
         <div class="container main">
             <div class="row">
-                <div class="col-md-6 side-image">  <a for="" class="close-btn1 fa fa-close" href="/"></a> 
+                <div class="col-md-6 side-image">  <a for="" class="close-btn1 fa fa-close" href="/instructorLogin"></a> 
                 </div>
                 <div class="col-md-6 right">
-                    <a for="" class="close-btn fa fa-close" href="/"></a>
+                    <a for="" class="close-btn fa fa-close" href="/instructorLogin"></a>
                      <div class="input-box">
-                        <header  >Faculty Login</header>
+                        <header  >Forgot Password</header>
                         <div class="input-field">
                             <input type="text" class="input" id="username" name="email" autocomplete="off">
                             <label for="username">Username</label>
                         </div>
                         <div class="input-field">
-                            <input type="password" class="input" id="password" name="password" >
-                            <label for="password">Password</label>
-                        </div>
-                        <div class="input-field">
-                            <input type="submit" class="submit" value="Sign In">
+                            <input type="submit" class="submit" value="Send Verifiction">
                             
-                        </div>
-                        <div class="signin">
-                            <span>Forgot password? <a href="/forgotPasswordInstructor">Help</a></span>
-                            <br>
-                            <% if (messages.error) { %>
-                                <% console.log(messages.error) %>
-                                <p style="color: red;"> <%= messages.error %></p>
-                                    <% } %>
                         </div>
                      </div>
                 </div>
